Fix alignment

--- a/app/javascript/app/components/country/emission-sources-chart/emission-sources-chart-styles.scss
+++ b/app/javascript/app/components/country/emission-sources-chart/emission-sources-chart-styles.scss
@@ -93,6 +93,7 @@
 
   .sectorContent {
     display: flex;
+    justify-content: center;
   }
 
   .sectorTitleContainer {
